<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.RegisterActivity">

    <com.github.florent37.shapeofview.shapes.ArcView
        android:id="@+id/arcView"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:background="@drawable/gradient_theme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shape_arc_cropDirection="outside"
        app:shape_arc_height="80dp"
        app:shape_arc_position="bottom">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/gradient_theme">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal|center_vertical"
                app:srcCompat="@drawable/logo_light" />

        </FrameLayout>
    </com.github.florent37.shapeofview.shapes.ArcView>

    <android.support.v7.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="48dp"
        android:layout_marginRight="48dp"
        app:cardElevation="2dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/arcView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/name"
                android:textColor="@color/black"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_edit_text"
                android:inputType="textPersonName"
                android:textSize="14sp"
                android:theme="@style/EditTextTheme" />

            <TextView
                android:id="@+id/name_error"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Name field is required"
                android:textColor="@color/colorThemeOrangeDark"
                android:visibility="gone"
                android:textSize="10sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/email"
                android:textColor="@color/black"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_edit_text"
                android:inputType="textEmailAddress"
                android:textSize="14sp"
                android:theme="@style/EditTextTheme" />

            <TextView
                android:id="@+id/email_error"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Email field is required"
                android:textColor="@color/colorThemeOrangeDark"
                android:visibility="gone"
                android:textSize="10sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/password"
                android:textColor="@color/black"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_edit_text"
                android:inputType="textPassword"
                android:textSize="14sp"
                android:theme="@style/EditTextTheme" />

            <TextView
                android:id="@+id/password_error"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Password must be 6 characters long"
                android:textColor="@color/colorThemeOrangeDark"
                android:visibility="gone"
                android:textSize="10sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/confirm_password"
                android:textColor="@color/black"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/password_confirmation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_edit_text"
                android:inputType="textPassword"
                android:textSize="14sp"
                android:theme="@style/EditTextTheme" />

            <TextView
                android:id="@+id/password_confirmation_error"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Password mismatch"
                android:textColor="@color/colorThemeOrangeDark"
                android:visibility="gone"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/btnRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:background="@drawable/gradient_orange_rounded"
                android:paddingLeft="32dp"
                android:paddingTop="8dp"
                android:paddingRight="32dp"
                android:paddingBottom="8dp"
                android:text="@string/register"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <TextView
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/already_a_member_login"
        android:textColor="@color/cornflower_blue_two"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />

</android.support.constraint.ConstraintLayout>